@startuml Academia2025
hide circle

rectangle "Relacionamento entre Entidades" {
entity Membros {
  * idMembro: int
    nome: string
    cpf: string
    telefone: string
    dataCadastro: date
}

entity Treinos {
  * idTreino: int
    tipo: string
    dataInicio: date
    descricao: string
    + idMembro: int
    + idFuncionario: int
}

entity Pagamentos {
  * idPagamento: int
    valor: decimal
    status: string
    dataPagamento: date
    + idMembro: int
}

entity Historico {
  * idHistorico: int
    dataAtividade: date
    atividade: string
    tempoExecucao: int
    + idMembro: int
}

entity Funcionarios {
  * idFuncionario: int
    nome: string
    cargo: string
    login: string
    senha: string
}

'Relacionamentos
Membros ||--o{ Pagamentos : "realiza"
Membros ||--o{ Treinos : "possui"
Membros ||--o{ Historico : "tem"
Funcionarios ||--o{ Treinos : "atribui"
}
@enduml
